@@ -48,7 +48,8 @@ typedef enum
    EEZE_DISK_MOUNTOPT_UTF8 = (1 << 2),
    EEZE_DISK_MOUNTOPT_NOEXEC = (1 << 3),
    EEZE_DISK_MOUNTOPT_NOSUID = (1 << 4),
-   EEZE_DISK_MOUNTOPT_REMOUNT = (1 << 5)
+   EEZE_DISK_MOUNTOPT_REMOUNT = (1 << 5),
+   EEZE_DISK_MOUNTOPT_UID = (1 << 6) /**< use current user's uid */
 } Eeze_Mount_Opts;
 
 
